fix wrap specificity

--- a/packages/scss/src/components/button/component.scss
+++ b/packages/scss/src/components/button/component.scss
@@ -1,3 +1,5 @@
+@use '@lucca-front/icons/src/icon/exports' as icon;
+
 @use '@lucca-front/scss/src/commons/utils/a11y';
 
 @mixin component {
@@ -24,11 +26,11 @@
 	background-color: var(--palettes-700, var(--palettes-primary-700));
 	color: var(--palettes-text, var(--palettes-primary-text));
 	cursor: pointer;
+	@include icon.M;
 
-	.button-icon,
-	.lucca-icon {
-		// .lucca-icon legacy
-		font-size: var(--icon-size, 1.5rem);
+	.button-icon {
+		// deprecated
+		@include icon.M;
 	}
 
 	&:last-of-type {
