--- a/packages/scss/src/components/clear/mods.scss
+++ b/packages/scss/src/components/clear/mods.scss
@@ -13,5 +13,5 @@
 
 @mixin S {
   --components-clear-size: .75rem;
-  --components-clear-icon-size: .75rem;
+  --icon-size: .75rem;
 }
